syntax = "proto3";

package im.actor.server;

message UserData {
    string time_zone = 1;
    repeated string preferred_languages = 2;
}
